# sesh

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  ROADMAP.md  SECURITY.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  error.rs  indexer.rs  lib.rs  main.rs  models.rs  pricing.rs  provider.rs  provider_utils.rs  terminal.rs  tool_metadata.rs  trash_state.rs  watcher.rs
src-tauri/src/commands/: mod.rs  search.rs  sessions.rs  settings.rs  terminal.rs  trash.rs  usage.rs
src-tauri/src/db/: mod.rs  queries.rs  row_mapper.rs  sync.rs
src-tauri/src/exporter/: html.rs  json.rs  markdown.rs  mod.rs  templates.rs  tool_html.rs
src-tauri/src/providers/: cc_mirror.rs  claude.rs  codex.rs  cursor.rs  gemini.rs  mod.rs  opencode.rs
src-tauri/src/providers/claude/: mod.rs  parser.rs
src-tauri/src/providers/codex/: mod.rs  parser.rs  tools.rs
src-tauri/src/providers/copilot/: mod.rs  parser.rs
src-tauri/src/providers/cursor/: mod.rs  parser.rs  tools.rs
src-tauri/src/providers/gemini/: chat_parser.rs  images.rs  logs_parser.rs  mod.rs  orphan.rs  tools.rs
src-tauri/src/providers/kimi/: mod.rs  parser.rs  tools.rs
src-tauri/src/providers/opencode/: mod.rs  parser.rs
src-tauri/src/providers/qwen/: mod.rs  parser.rs
src-tauri/src/services/: image_cache.rs  load_cancel.rs  mod.rs  persisted_output_cache.rs  provider_snapshots.rs  session_cache.rs  session_lifecycle.rs  session_resolution.rs  source_sync.rs
src-tauri/tests/: fixture_command_interface.rs  parser_tests.rs  provider_lifecycle_real_interface.rs  tool_display_test.rs  trash_lifecycle_test.rs
src-tauri/tests/fixtures/: claude_session.jsonl  codex_session.jsonl  codex_subagent.jsonl  qwen_session.jsonl
src-tauri/tests/fixtures/copilot/: events.jsonl
src-tauri/tests/fixtures/gemini/: session-jsonl-rich-test.jsonl  session-jsonl-test.jsonl  (+1 more)
(+112 files in other folders)
