[package]
name = "cc-session"
version = "0.3.1"
description = "High-performance desktop session explorer for Claude Code, Codex, and Gemini CLI"
authors = ["you"]
edition = "2021"

[lib]
name = "cc_session_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "cc-session"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled", "backup"] }
rayon = "1.10"
notify = "7"
memmap2 = "0.9"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
md5 = "0.7"
walkdir = "2"
thiserror = "2"
base64 = "0.22"
zip = "2"
tauri-plugin-updater = "2.10.0"
tauri-plugin-process = "2.3.1"
tokio = { version = "1", features = ["rt"] }
log = "0.4"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true

[build-dependencies]
tauri-build = { version = "2", features = [] }
